tests/repositories/snapshots/yarn/.github/workflows/tmp_template.yml.snap
---
source: tests/common/mod.rs
expression: content
---
name: tmp_template

on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main

jobs:
  reuse:

    runs-on: ubuntu-latest

    steps:
    - uses: actions/checkout@v4

    - name: REUSE Compliance Check
      uses: fsfe/reuse-action@v1

  yarn-install:

    needs: reuse

    strategy:
      matrix:
        platform: [ubuntu-latest, macos-latest]

    runs-on: ${{ matrix.platform }}

    steps:
    - uses: actions/checkout@v4

    - name: Install node
      uses: actions/setup-node@v2
      with:
        node-version: '14.x'

    - name: Install dependencies
      run: |
        yarn install

